[package]
name = "hotserve"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "0.7.14"
structopt = "0.2.13"
actix = "0.7.7"
failure = "0.1.3"
env_logger = "0.6.0"
regex = "1.0.6"
lazy_static = "1.2.0"
notify = "4.0.6"
log = "0.4.6"
slab = "0.4.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
