[package]
name = "hotserve"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "0.7.18"
structopt = "0.2.14"
actix = "0.7.9"
failure = "0.1.5"
env_logger = "0.6.0"
regex = "1.1.0"
lazy_static = "1.2.0"
notify = "4.0.7"
log = "0.4.6"
slab = "0.4.2"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
